# JayLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.jay  example.txt  gitignore
AntlrProof/: main.cpp
Java/src/main/java/: Polygot.java
include/: AssemblyInfo.h  Byteloader.h  ClassLoader.h  Compiler.h  Environment.h  ErrorHandler.h  Expression.h  Linker.h  ParseError.h  Parser.h  ParserError.h  Scanner.h  Statement.h  Token.h  statementTypes.h
jaylib/: pom.xml
jaylib/greeting-module/src/: module-info.java
jaylib/greeting-module/src/com/example/greeting/: Greeting.java
jaylib/src/main/java/: Test.java  module-info.java
jaylib/src/main/java/Interop/: JayInterop.java
jaylib/src/main/java/Types/: JayObject.java  JayType.java  Type.java  package-info.java
jaylib/untitled/: build.gradle.kts
jaylib/untitled/gradle/wrapper/: gradle-wrapper.properties
jaylib/untitled/src/main/kotlin/: Example.kt
src/: Byteloader.cpp  ClassLoader.cpp  Compiler.cpp  Environment.cpp  Expression.cpp  Linker.cpp  Parser.cpp  Scanner.cpp  Token.cpp  main.cpp
